update main stylesheet

--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
     <link href="https://cdn.jsdelivr.net/gh/necolas/normalize.css/normalize.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="first-screen-section">
-        <div class="avatar-block">
-            <div class="avatar">
-                <img src="./assets/images/shirley_profile_img.jpg" alt="">
-            </div>
-            <div class="loading-bar"></div>
-            <div class="avatar">
-                <img src="./assets/images/y2nk4_profile_img.jpg" alt="">
+    <div class="first-screen-wrapper">
+        <div class="first-screen-section">
+            <div class="avatar-block">
+                <div class="avatar">
+                    <img src="./assets/images/shirley_profile_img.jpg" alt="">
+                </div>
+                <div class="loading-bar-block">
+                    <div class="loading-bar left"></div>
+                    <div class="loading-bar right"></div>
+                </div>
+                <div class="avatar">
+                    <img src="./assets/images/y2nk4_profile_img.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
+
+    <script>
+
+    </script>
 </body>
 </html>
