--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="loading-bar-block">
                     <div class="upper-text-wrapper">
                         <div class="loading-bar-upper-text">
-                            在一起 <span id="togetherDay"></span> 天
+                            在一起 <span id="togetherDay"></span> 天啦~
                         </div>
                         <div class="upper-text-cover">
 
