--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             }
 
             document.querySelector('div.first-screen-section div.loading-bar-upper-text')
-                  .style.setProperty('--progress', -scrollPercentage * 40 + 'px')
+                  .style.setProperty('--progress', -scrollPercentage * 130 + '%')
 
             // 第二屏内容
         }
