--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
                         <div class="loading-bar-upper-text">
                             在一起 <span id="togetherDay"></span> 天啦~
                         </div>
-                        <div class="upper-text-cover">
-
-                        </div>
+                        <div class="upper-text-cover"></div>
                     </div>
                     <div class="loading-bars">
                         <div class="loading-bar left"></div>
@@ -33,6 +31,11 @@
                     <img src="./assets/images/y2nk4_profile_img.jpg" alt="">
                 </div>
             </div>
+            <div class="background-animation-canvas">
+                <div class="animation-img"><img src="./assets/images/flowers/rose_flower.svg"></div>
+                <div class="animation-img"><img src="./assets/images/flowers/tedd_bear.svg"></div>
+                <div class="animation-img"><img src="./assets/images/flowers/white_flower.svg"></div>
+            </div>
         </div>
     </div>
     <div>
@@ -40,11 +43,16 @@
     </div>
 
     <script>
+        function rad2deg(red) {
+            return 180 * red / Math.PI
+        }
+
         const togetherDay = parseInt((new Date() - new Date('2021/5/23')) / 1000 / 3600 / 24)
         document.querySelector('#togetherDay').innerHTML = togetherDay
 
         const html = document.documentElement
         const clientHeight = html.clientHeight
+        const clientWidth = html.clientWidth
         const firstScreenSection = document.querySelector('.first-screen-wrapper')
         const firstScreenMaxHeight = firstScreenSection.scrollHeight - clientHeight
         let scrollFunc = () => {
@@ -63,6 +71,40 @@
             document.querySelector('div.first-screen-section div.loading-bar-upper-text')
                   .style.setProperty('--progress', -scrollPercentage * 40 + 'px')
 
+            for (let [index, animation] of
+                  document.querySelectorAll('div.first-screen-section div.background-animation-canvas div.animation-img').entries()) {
+                if (index === 0) {
+                    let x = scrollPercentage * clientWidth
+                    // 抛物线函数
+                    let y = .001*Math.pow(x - 435, 2) + 165
+                    // 抛物线函数的一阶导数
+                    let y_2 = -0.002 * x + 0.87
+                    let angle = Math.atan(y_2)
+                    animation.style.setProperty('left', scrollPercentage * clientWidth - 50 + 'px')
+                    animation.style.setProperty('top', y + 'px')
+                    animation.style.setProperty('transform', `rotate(${angle}rad)`)
+                } else if (index === 1) {
+                    let x = scrollPercentage * clientWidth
+                    // 抛物线函数
+                    let y = .001*Math.pow(x - 342, 2) + 120
+                    // 抛物线函数的一阶导数
+                    let y_2 = -0.002* x + 0.684
+                    let angle = Math.atan(y_2)
+                    animation.style.setProperty('left', scrollPercentage * clientWidth - 50 + 'px')
+                    animation.style.setProperty('top', y + 'px')
+                    animation.style.setProperty('transform', `rotate(${angle}rad)`)
+                } else if (index === 2) {
+                    let x = clientWidth - (scrollPercentage * clientWidth)
+                    // 抛物线函数
+                    let y = .001*Math.pow(x - 542, 2) + 140
+                    // 抛物线函数的一阶导数
+                    let y_2 = -0.002* x + 1.084
+                    let angle = Math.atan(y_2)
+                    animation.style.setProperty('left', x - 50 + 'px')
+                    animation.style.setProperty('top', y + 'px')
+                    animation.style.setProperty('transform', `rotate(${angle}rad)`)
+                }
+            }
             // 第二屏内容
         }
         window.addEventListener('load', scrollFunc)
