--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div>
-        <h1>Second</h1>
+        <h1 style="text-align:center; padding: 20px 0;">ShirShir x Y2Nk4</h1>
     </div>
 
     <script>
